--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 .idea/
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*/*/*/__pycache__/
+*/*/__pycache__/
+*/__pycache__/__pycache__/
 *.py[cod]
 *$py.class
 
