--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,33 @@
+aiohttp==3.5.4
+asn1crypto==0.24.0
 astroid==2.2.5
+async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.4
+certifi==2018.11.29
+cffi==1.12.3
+chardet==3.0.4
 coverage==4.5.3
+cryptography==2.7
 dj-database-url==0.5.0
 Django==2.2.3
+django-crispy-forms==1.7.2
+django-extensions==2.2.1
 django-heroku==0.3.1
 entrypoints==0.3
 factory-boy==2.12.0
 Faker==2.0.0
 future==0.17.1
 gunicorn==19.9.0
+idna==2.8
 importlib-metadata==0.18
 isort==4.3.21
 jedi==0.13.3
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 more-itertools==7.1.0
+multidict==4.5.2
 packaging==19.0
 parso==0.5.1
 path.py==12.0.1
@@ -24,6 +35,7 @@ pluggy==0.12.0
 psycopg2==2.8.3
 py==1.8.0
 pycodestyle==2.5.0
+pycparser==2.19
 pydocstyle==4.0.0
 pyflakes==2.1.1
 pylint==2.3.1
@@ -39,16 +51,15 @@ python-language-server==0.27.0
 pytz==2019.1
 rope==0.14.0
 six==1.12.0
+slackclient==2.1.0
 snowballstemmer==1.9.0
 sqlparse==0.3.0
 text-unidecode==1.2
 typed-ast==1.4.0
 wcwidth==0.1.7
 whitenoise==4.1.3
+wincertstore==0.2
 wrapt==1.11.2
 yapf==0.28.0
+yarl==1.3.0
 zipp==0.5.2
-
-certifi==2018.11.29
-django-crispy-forms==1.7.2
-wincertstore==0.2
