--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aiohttp==3.5.4
+amqp==2.5.0
 asn1crypto==0.24.0
 astroid==2.2.5
 async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
 autopep8==1.4.4
+billiard==3.6.0.0
+celery==4.3.0
 certifi==2018.11.29
 cffi==1.12.3
 chardet==3.0.4
@@ -24,6 +27,7 @@ idna==2.8
 importlib-metadata==0.18
 isort==4.3.21
 jedi==0.13.3
+kombu==4.6.3
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 more-itertools==7.1.0
@@ -49,6 +53,7 @@ python-dotenv==0.10.3
 python-jsonrpc-server==0.2.0
 python-language-server==0.27.0
 pytz==2019.1
+redis==3.2.1
 rope==0.14.0
 six==1.12.0
 slackclient==2.1.0
@@ -56,6 +61,7 @@ snowballstemmer==1.9.0
 sqlparse==0.3.0
 text-unidecode==1.2
 typed-ast==1.4.0
+vine==1.3.0
 wcwidth==0.1.7
 whitenoise==4.1.3
 wincertstore==0.2
